# prx_aec

./: .gitignore  .gitmodules  BUILDING.md  Cargo.toml  README.md
.github/workflows/: publish-libaec.yml  publish-pypi.yml
crates/aec-rs-sys/: Cargo.toml  build.rs  wrapper.h
crates/libaec/: Cargo.toml  build.rs
crates/libaec/binds/: aec.py
crates/libaec/pyaec/: aec.py  main.py  microphone.py  wav.py
crates/libaec/src/: lib.rs
examples/: usage.rs  wav.rs
examples/python-examples/: microphone.py  wav.py
prx_pyaec/: BUILDING.md  README.md  buildit.sh  hatch_build.py  pyproject.toml  requirements.txt  testload.py
prx_pyaec/src/prx_pyaec/: __init__.py
pyaec/: BUILDING.md  README.md  build.py  pyproject.toml
pyaec/src/pyaec/: __init__.py
src/: lib.rs
