[workspace]
members = ["crates/aec-rs-sys", "crates/libaec"]

[package]
name = "aec-rs"
version = "1.0.0"
edition = "2021"
authors = ["thewh1teagle"]
license = "MIT"
repository = "https://github.com/thewh1teagle/aec-rs"
description = "Acoustic echo cancellation in Rust"
homepage = "https://github.com/thewh1teagle/aec-rs"

[dependencies]
aec-rs-sys = { path = "crates/aec-rs-sys", version = "1.0.0" }

[dev-dependencies]
hound = { version = "3.5.1" }
