[workspace]
members = ["crates/aec-rs-sys", "crates/libaec"]

[package]
name = "aec-rs"
version = "1.0.0"
edition = "2021"
authors = ["thewh1teagle"]
license = "MIT"
repository = "https://github.com/thewh1teagle/aec"
description = "Acoustic echo cancellation in Rust"
homepage = "https://github.com/thewh1teagle/aec"

[dependencies]
aec-rs-sys = { path = "crates/aec-rs-sys", version = "1.0.0" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.99" }

[lib]
# For wasm
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
hound = { version = "3.5.1" }
