[project]
name = "prx_pyaec"
version = "2.0.1"
description = "PRX Acoustic echo cancellation"
readme = "README.md"
authors = [
    { name = "wnm3", email = "wnmills3@gmail.com" },
    { name = "thewh1teagle", email = "61390950+thewh1teagle@users.noreply.github.com" },
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "prx_pyaec"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.hatch.build.targets.wheel]
packages = ["src/prx_pyaec"]

[tool.hatch.build.targets.wheel.hooks.custom]
packages = ["src/prx_pyaec"]

