[project]
name = "pyaec"
version = "0.1.0-beta.1"
description = "Acoustic echo cancellation"
readme = "README.md"
authors = [
    { name = "thewh1teagle", email = "61390950+thewh1teagle@users.noreply.github.com" },
]
requires-python = ">=3.6"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
